# toml-sync

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
toml-sync/: Cargo.toml
toml-sync-lib/: Cargo.toml
toml-sync-lib/src/: lib.rs
toml-sync/src/: main.rs
tompl-sync-lib/: Cargo.toml
tompl-sync-lib/src/: lib.rs
