[package]
name = "toml-sync-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.11.5"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version ="*"}
tokio = { version = "1", features = ["full"] }
glob = {version = "0.3.0" }
prettytable-rs = "^0.8"