[package]
name = "toml-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "*"
toml-sync-lib = { version = "0.1.0", path = "../toml-sync-lib" }
tokio = { version = "1", features = ["full"] }